feat: query refinement
